# cerebras

./: .env.example  .gitignore  PROMPT.md  Procfile  README.md  ROADMAP.md  SUPABASE.md  ai_coach.py  coach_config.json  config.json  guitar_config.json  pyproject.toml  rename_models.py  requirements.txt  start-vibe-draw.sh  tts_manager.py  yoga_config.json
backend/: .env.example  Procfile  README.md  ai_coach.py  app.py  direct_web.py  list_models.py  main.py  pyproject.toml  railway.json  requirements.txt  start_direct.py  start_server.py  test_app.py  tts_manager.py
backend/configs/: basketball_config.json  football_config.json  guitar_config.json  plyometrics_config.json  sleep_config.json  yoga_config.json
backend/temp_segments/: live_2e426bb1-1226-466d-b0d0-9122183dcb32_1754219727.webm  live_76944a58-ad51-41c3-bbe3-f3a3948b0f33_1754219958.webm  live_8d8a70d6-5b77-4c76-a85d-3404a2b1ca56_1754220281.webm  live_b064155a-8e5c-47d8-9e74-30d387af2abf_1754220477.webm  live_be8440d8-2414-4046-892d-7edba3163495_1754221227.webm  live_d86a78a6-fd85-4d71-8bbc-f5730d260b84_1754220777.webm
backend/utils/: __init__.py  config_manager.py
configs/: basketball_config.json
fr8_ai_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.local  .env.local.example  README.md  next.config.js  package-lock.json  package.json
frontend/.next/: trace
frontend/app/: page.tsx
frontend/components/: ErrorBoundary.tsx  FeedbackOverlay.tsx  LoadingSpinner.tsx
frontend/hooks/: useAudio.ts  useWebSocket.ts
frontend/lib/: config.ts
inspiration/: README.md  ball.py
(+40 files in other folders)
