[project]
name = "fr8-ai-coach"
version = "0.1.0"
description = "Real-time AI coaching with video capture and voice feedback"
dependencies = [
    "opencv-python",
    "google-generativeai",
    "python-dotenv",
    "google-genai>=1.28.0",
    "openai>=1.98.0",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]