[project]
name = "ned"
version = "0.1.0"
description = "Real-time coaching with video capture and voice feedback"
dependencies = [
    "opencv-python",
    "google-generativeai",
    "python-dotenv",
    "google-genai>=1.28.0",
    "openai>=1.98.0",
    "ruff>=0.12.7",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]